# glacier-alarm-listener

./: CMakeLists.txt  LICENSE  com.nokia.voland.service  glacier-alarm-listener.service  voland.conf
src/: CMakeLists.txt  main.cpp
src/qml/: glacier-alarm-listener.qml  glacier-alarm-listener.qrc
src/qml/components/: CalendarDelegate.qml  ClockDelegate.qml  CountdownDelegate.qml  GenericDialog.qml  ListViewItemForEvent.qml  ReminderDelegate.qml
src/qml/pages/: MainPage.qml
translations/: glacier-alarm-listener.ts  glacier-alarm-listener_ar.ts  glacier-alarm-listener_cs.ts  glacier-alarm-listener_de.ts  glacier-alarm-listener_pl.ts  glacier-alarm-listener_ru.ts
